@@ -4,7 +4,8 @@
 - New Event Helper script CinemachineEventMapper maps UnityEvents to Virtual Cameras
 - New Event Helper script CinemachineTriggerAction takes action on Collider and Collider2D enter/exit events, and exposes them as UnityEvents
 - Added support for Physical Camera
-- Added Named FOV presets for Camera Lens
+- Added Focal Length or Named FOV presets for Camera Lens
+- Collider: now returns TargetIsObscured if the target is offscreen (great for cameras with fixed aim)
 - NoiseSettings: added checkbox for pure sine-wave instead of Perlin wave
 - Added NoiseSettings editor with signal preview
 - If no LookAt target, PostProcessing FocusTracksTarget offset is relative to camera
